--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -36,3 +36,9 @@ security:
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         #- { path: ^/_internal, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
+
+    encoders:
+        Mcms\UserBundle\Entity\User:
+            algorithm:  sha1
+            encode_as_base64:   false
+            iterations: 1
