--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,26 +38,7 @@ security:
         #- { path: ^/_internal, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
 
     encoders:
-        Mcms\UsersBundle\Entity\User:
+        Mcms\UserBundle\Entity\User:
             algorithm:  sha1
             encode_as_base64:   false
             iterations: 1
-
-    providers:
-        users:
-            entity: { class: McmsUsersBundle:User, property: username }
-
-    firewalls:
-        mainfirewall:
-            pattern:    /.*
-            form_login:
-                check_path: /login_check
-                login_path: /login
-            logout: ~
-            security:   ~
-            anonymous:  ~
-
-    access_control:
-        - { path: /admin, role: ROLE_ADMIN }
-        - { path: /patient, role: ROLE_PATIENT }
-        - { path: /.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
