--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -33,6 +33,19 @@ McmsUserBundle:
     type:     annotation
     prefix:   /
 
+login:
+    pattern: /login
+    defaults: { _controller: McmsUserBundle:Security:login }
+
+login_check:
+    pattern: /login_check
+
+logout:
+    pattern: /logout
+
+admin_dashboard:
+    pattern: /patient/new
+
 # Internal routing configuration to handle ESI
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
