--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -46,6 +46,18 @@ logout:
 admin_dashboard:
     pattern: /patient/new
 
+changePassword:
+    pattern: /change_password
+    defaults: { _controller: McmsUserBundle:Manage:changePassword }
+    requirements:
+        _method:  GET
+
+changePasswordProcess:
+    pattern: /change_password
+    defaults: { _controller: McmsUserBundle:Manage:changePasswordProcess }
+    requirements:
+        _method:  POST
+
 # Internal routing configuration to handle ESI
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
