--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+McmsDashboardBundle:
+    resource: "@McmsDashboardBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 McmsPaymentBundle:
     resource: "@McmsPaymentBundle/Controller/"
     type:     annotation
@@ -32,6 +37,31 @@ McmsUserBundle:
     resource: "@McmsUserBundle/Controller/"
     type:     annotation
     prefix:   /
+
+login:
+    pattern: /login
+    defaults: { _controller: McmsUserBundle:Security:login }
+
+login_check:
+    pattern: /login_check
+
+logout:
+    pattern: /logout
+
+admin_dashboard:
+    pattern: /patient/new
+
+changePassword:
+    pattern: /change_password
+    defaults: { _controller: McmsUserBundle:Manage:changePassword }
+    requirements:
+        _method:  GET
+
+changePasswordProcess:
+    pattern: /change_password
+    defaults: { _controller: McmsUserBundle:Manage:changePasswordProcess }
+    requirements:
+        _method:  POST
 
 # Internal routing configuration to handle ESI
 #_internal:
