--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,3 +58,10 @@ swiftmailer:
 jms_security_extra:
     secure_controllers:  true
     secure_all_services: false
+
+services:
+    employee_controller:
+        class: Mcms\EmployeeBundle\Controller\EmployeeController
+        arguments: []
+        calls:
+              - [ setContainer, [ @service_container ] ]
