--- a/app/config/patient_routes.yml
+++ b/app/config/patient_routes.yml
@@ -1,1 +1,10 @@
 #Here place only patient routes!!!
+patient.listOfEmployees:
+    pattern: /listOfEmployees
+    defaults: { _controller: McmsDashboardBundle:Patient:listOfEmployees }
+
+patient.showEmployee:
+    pattern: /employee/{id}/show
+    defaults: { _controller: McmsDashboardBundle:Patient:showEmployee }
+    requirements:
+        id: \d+
