--- a/app/config/patient_routes.yml
+++ b/app/config/patient_routes.yml
@@ -43,12 +43,14 @@ patient.showEmployeeTimetable:
         month: \d+
 
 patient.timetableNew:
-    pattern: /employee/{employeeId}/timetable/{year}/{month}/new
+    pattern: /employee/{employeeId}/timetable/{year} {month}/{hour} {minutes}/new
     defaults: { _controller: McmsTimetableBundle:Timetable:new, roleTheme: Patient, year: null, month: null, patientId: null, employeeId: null }
     requirements:
         employeeId: \d+
-        year: \d+
-        month: \d+
+        year: \d{4}
+        month: \d{2}
+        hour: "(([0-1][0-9])|([2][0-3]))"
+        minutes: "([0-5][0-9])"
 
 patient.timetableCreate:
     pattern: /employee/{employeeId}/timetable/{year}/{month}/create
