--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -1,6 +1,6 @@
 _welcome:
     pattern:  /
-    defaults: { _controller: AcmeDemoBundle:Welcome:index }
+    defaults: { _controller: McmsUserBundle:Security:login }
 
 _demo_secured:
     resource: "@AcmeDemoBundle/Controller/SecuredController.php"
