--- a/app/config/employee_routes.yml
+++ b/app/config/employee_routes.yml
@@ -87,12 +87,9 @@ employee.medicalHistoryUpdate:
         _method:    POST
 
 #PAYMENTS
-employee.paymentNew:
-    pattern: /payment/new
-    defaults: { _controller: McmsPaymentBundle:Payment:new }
-
-employee.paymentCreate:
-    pattern: /payment/create
-    defaults: { _controller: McmsPaymentBundle:Payment:create }
+employee.paymentShow:
+    pattern: /patient/{patientId}/payments/{paymentId}
+    defaults: { _controller: McmsPaymentBundle:Payment:show }
     requirements:
-        _method:    POST
+        patientId: \d+
+        paymentId: \d+
