--- a/app/config/patient_routes.yml
+++ b/app/config/patient_routes.yml
@@ -62,7 +62,7 @@ patient.timetableNew:
         month: \d{2}
         day: "([0-2][0-9]|3[01])"
         hours: "(([0-1][0-9])|([2][0-3]))"
-        minutes: "([0-5][0-9])"
+        minutes: "(00|15|30|45)"
 
 patient.timetableCreate:
     pattern: /employee/{employeeId}/timetable/{year} {month} {day}/{hours} {minutes}/create
