Added list my timetable entries feature

--- a/app/config/employee_routes.yml
+++ b/app/config/employee_routes.yml
@@ -108,3 +108,10 @@ employee.paymentUpdate:
         patientId: \d+
         paymentId: \d+
         _method: POST
+
+#TIMETABLE
+employee.timetableList:
+    pattern: /timetable/{page}
+    defaults: { _controller: McmsTimetableBundle:Timetable:list, roleTheme: Employee, page: 1 }
+    requirements:
+        page: \d+
