--- a/app/config/patient_routes.yml
+++ b/app/config/patient_routes.yml
@@ -91,3 +91,10 @@ patient.showTimetable:
 patient.productsList:
     pattern: /product
     defaults: { _controller: McmsProductBundle:Product:list, roleTheme: Patient }
+
+#TIMETABLE
+patient.timetableList:
+    pattern: /timetable/{page}
+    defaults: { _controller: McmsTimetableBundle:Timetable:list, roleTheme: Patient, page: 1 }
+    requirements:
+        page: \d+
